thesis backup, experiment re-write for vectorized quantile estimations, (not done with this part yet, needs debugging)

--- a/QuantEst/thesis/draft/Thesis.bib
+++ b/QuantEst/thesis/draft/Thesis.bib
@@ -494,5 +494,10 @@
   file = {/Users/sue/Zotero/storage/Q4ZA82QZ/Cormode et al. - 2006 - Space- and time-efficient deterministic algorithms.pdf}
 }
 
+@misc{IEEEXploreFullText,
+  title = {{{IEEE Xplore Full}}-{{Text PDF}}:},
+  howpublished = {https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=\&arnumber=8360417},
+  file = {/Users/sue/Zotero/storage/E4JURMV7/stamp.html}
+}
 
 
