re-structure literature review again...

--- a/QuantEst/thesis/draft/Thesis.bib
+++ b/QuantEst/thesis/draft/Thesis.bib
@@ -38,6 +38,14 @@
   primaryClass = {cs}
 }
 
+@article{buragohainQuantilesStreams2009,
+  title = {Quantiles on {{Streams}}},
+  author = {Buragohain, Chiranjeeb and Subhash, Suri},
+  year = {2009},
+  doi = {10.1007/978-0-387-39940-9_290},
+  file = {/Users/sue/Zotero/storage/3XJDLJVX/ency.pdf}
+}
+
 @inproceedings{cormodeSpaceTimeefficientDeterministic2006,
   title = {Space- and Time-Efficient Deterministic Algorithms for Biased Quantiles over Data Streams},
   booktitle = {Proceedings of the Twenty-Fifth {{ACM SIGMOD}}-{{SIGACT}}-{{SIGART}} Symposium on {{Principles}} of Database Systems  - {{PODS}} '06},
@@ -318,12 +326,12 @@
   primaryClass = {cs}
 }
 
-@article{mankuApproximateMediansOther,
+@article{mankuApproximateMediansOthera,
   title = {Approximate {{Medians}} and Other {{Quantiles}} in {{One Pass}} and with {{Limited Memory}}},
   author = {Manku, Gurmeet Singh and Rajagopalan, Sridhar and Lindsay, Bruce G},
   pages = {10},
   abstract = {We present new algorithms for computing approximate quantiles of large datasets in a single pass. The approximation guarantees are explicit, and apply without regard to the value distribution or the arrival distributions of the dataset. The main memory requirements are smaller than those reported earlier by an order of magnitude.},
-  file = {/Users/sue/Zotero/storage/F7EN3ZZQ/Manku et al. - Approximate Medians and other Quantiles in One Pas.pdf},
+  file = {/Users/sue/Zotero/storage/KKAD4EX4/Manku et al. - Approximate Medians and other Quantiles in One Pas.pdf},
   language = {en}
 }
 
@@ -354,6 +362,21 @@
   issn = {1551-305X, 1551-3068},
   doi = {10.1561/0400000002},
   file = {/Users/sue/Zotero/storage/QPXDC4UQ/Muthukrishnan - 2005 - Data Streams Algorithms and Applications.pdf},
+  journal = {Foundations and Trends\textregistered{} in Theoretical Computer Science},
+  language = {en},
+  number = {2}
+}
+
+@article{muthukrishnanDataStreamsAlgorithms2005a,
+  title = {Data {{Streams}}: {{Algorithms}} and {{Applications}}},
+  shorttitle = {Data {{Streams}}},
+  author = {Muthukrishnan, S.},
+  year = {2005},
+  volume = {1},
+  pages = {117--236},
+  issn = {1551-305X, 1551-3068},
+  doi = {10.1561/0400000002},
+  file = {/Users/sue/Zotero/storage/4GRSUBB8/Muthukrishnan - 2005 - Data Streams Algorithms and Applications.pdf},
   journal = {Foundations and Trends\textregistered{} in Theoretical Computer Science},
   language = {en},
   number = {2}
